changed alert mobile padding to fix cut off

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1512,6 +1512,10 @@ button.close {
     border: none;
     border-radius: 0px;
     padding-bottom: 15px;
+
+     @include media-breakpoint-down(phone) {
+     	padding: 0.75rem 1.875rem;
+     }
 }
 .alert-text {
     width: 75%!important;
@@ -1570,6 +1574,10 @@ button.close {
 	.close {
 		padding: .75rem 2rem;
 		color: $yellow;
+
+		 @include media-breakpoint-down(phone) {
+		 	right: 15px;
+		 }
 	}
 	&.fade.show.alert-success,
 	&.fade.show.alert-info {
